--- a/RegressionNotebook.ipynb
+++ b/RegressionNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,345 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import cross_val_score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-02-08</td>\n",
+       "      <td>15.07</td>\n",
+       "      <td>15.12</td>\n",
+       "      <td>14.63</td>\n",
+       "      <td>14.75</td>\n",
+       "      <td>8407500</td>\n",
+       "      <td>AAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-02-11</td>\n",
+       "      <td>14.89</td>\n",
+       "      <td>15.01</td>\n",
+       "      <td>14.26</td>\n",
+       "      <td>14.46</td>\n",
+       "      <td>8882000</td>\n",
+       "      <td>AAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-12</td>\n",
+       "      <td>14.45</td>\n",
+       "      <td>14.51</td>\n",
+       "      <td>14.10</td>\n",
+       "      <td>14.27</td>\n",
+       "      <td>8126000</td>\n",
+       "      <td>AAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2013-02-13</td>\n",
+       "      <td>14.30</td>\n",
+       "      <td>14.94</td>\n",
+       "      <td>14.25</td>\n",
+       "      <td>14.66</td>\n",
+       "      <td>10259500</td>\n",
+       "      <td>AAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2013-02-14</td>\n",
+       "      <td>14.94</td>\n",
+       "      <td>14.96</td>\n",
+       "      <td>13.16</td>\n",
+       "      <td>13.99</td>\n",
+       "      <td>31879900</td>\n",
+       "      <td>AAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619035</td>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>76.84</td>\n",
+       "      <td>78.27</td>\n",
+       "      <td>76.69</td>\n",
+       "      <td>77.82</td>\n",
+       "      <td>2982259</td>\n",
+       "      <td>ZTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619036</td>\n",
+       "      <td>2018-02-02</td>\n",
+       "      <td>77.53</td>\n",
+       "      <td>78.12</td>\n",
+       "      <td>76.73</td>\n",
+       "      <td>76.78</td>\n",
+       "      <td>2595187</td>\n",
+       "      <td>ZTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619037</td>\n",
+       "      <td>2018-02-05</td>\n",
+       "      <td>76.64</td>\n",
+       "      <td>76.92</td>\n",
+       "      <td>73.18</td>\n",
+       "      <td>73.83</td>\n",
+       "      <td>2962031</td>\n",
+       "      <td>ZTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619038</td>\n",
+       "      <td>2018-02-06</td>\n",
+       "      <td>72.74</td>\n",
+       "      <td>74.56</td>\n",
+       "      <td>72.13</td>\n",
+       "      <td>73.27</td>\n",
+       "      <td>4924323</td>\n",
+       "      <td>ZTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619039</td>\n",
+       "      <td>2018-02-07</td>\n",
+       "      <td>72.70</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>72.69</td>\n",
+       "      <td>73.86</td>\n",
+       "      <td>4534912</td>\n",
+       "      <td>ZTS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>619040 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date   open   high    low  close    volume Name\n",
+       "0       2013-02-08  15.07  15.12  14.63  14.75   8407500  AAL\n",
+       "1       2013-02-11  14.89  15.01  14.26  14.46   8882000  AAL\n",
+       "2       2013-02-12  14.45  14.51  14.10  14.27   8126000  AAL\n",
+       "3       2013-02-13  14.30  14.94  14.25  14.66  10259500  AAL\n",
+       "4       2013-02-14  14.94  14.96  13.16  13.99  31879900  AAL\n",
+       "...            ...    ...    ...    ...    ...       ...  ...\n",
+       "619035  2018-02-01  76.84  78.27  76.69  77.82   2982259  ZTS\n",
+       "619036  2018-02-02  77.53  78.12  76.73  76.78   2595187  ZTS\n",
+       "619037  2018-02-05  76.64  76.92  73.18  73.83   2962031  ZTS\n",
+       "619038  2018-02-06  72.74  74.56  72.13  73.27   4924323  ZTS\n",
+       "619039  2018-02-07  72.70  75.00  72.69  73.86   4534912  ZTS\n",
+       "\n",
+       "[619040 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_data = pd.read_csv(\"all_stocks_5yr.csv\")\n",
+    "stock_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_columns(data, columns):\n",
+    "    \"\"\"\n",
+    "    Get a data frame with only specific given columns\n",
+    "    Input(data): dataframe to choose specific columns from\n",
+    "    Input(columns): list of column names to choose\n",
+    "    Output: dataframe with specified columns only\n",
+    "    \"\"\"\n",
+    "    return data.loc[:, columns]\n",
+    "\n",
+    "def rmse(y, yhat):\n",
+    "    \"\"\"\n",
+    "    Return the rmse given y and yhat\n",
+    "    Input(y): actual value\n",
+    "    Input(yhat): predicted value\n",
+    "    Output: root mean squared error between actual and predicted values\n",
+    "    \"\"\"\n",
+    "    return np.sqrt(np.mean((y - yhat)**2))\n",
+    "\n",
+    "def rmse_score(model, X, y):\n",
+    "    \"\"\"\n",
+    "    Return the rmse score given the model, X, and y\n",
+    "    Input(model): model used to predict X\n",
+    "    Input (X): predicted values from model\n",
+    "    Input(y): actual value\n",
+    "    Output: root mean squared error score between actual and predicted values from a given model\n",
+    "    \"\"\"\n",
+    "    return np.sqrt(np.mean((y - model.predict(X)) ** 2))\n",
+    "\n",
+    "scaler = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-02-08</td>\n",
+       "      <td>15.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-02-11</td>\n",
+       "      <td>14.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-12</td>\n",
+       "      <td>14.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2013-02-13</td>\n",
+       "      <td>14.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2013-02-14</td>\n",
+       "      <td>14.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619035</td>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>76.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619036</td>\n",
+       "      <td>2018-02-02</td>\n",
+       "      <td>77.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619037</td>\n",
+       "      <td>2018-02-05</td>\n",
+       "      <td>76.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619038</td>\n",
+       "      <td>2018-02-06</td>\n",
+       "      <td>72.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>619039</td>\n",
+       "      <td>2018-02-07</td>\n",
+       "      <td>72.70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>619040 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date   open\n",
+       "0       2013-02-08  15.07\n",
+       "1       2013-02-11  14.89\n",
+       "2       2013-02-12  14.45\n",
+       "3       2013-02-13  14.30\n",
+       "4       2013-02-14  14.94\n",
+       "...            ...    ...\n",
+       "619035  2018-02-01  76.84\n",
+       "619036  2018-02-02  77.53\n",
+       "619037  2018-02-05  76.64\n",
+       "619038  2018-02-06  72.74\n",
+       "619039  2018-02-07  72.70\n",
+       "\n",
+       "[619040 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "select_columns(stock_data, [\"date\", \"open\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
